// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CrispiReport snapshots > scores the aggro/voltron fixture 1`] = `
{
  "axes": {
    "consistency": {
      "evidence": [
        {
          "axis": "C",
          "card": "Sol Ring",
          "contribution": 1,
          "reason": "ramp: mana production effect",
          "subMetric": "ramp.count",
        },
      ],
      "grade": "F",
      "notes": [
        "Card-draw density is below the aggro/voltron minimum target.",
        "Ramp density is below the aggro/voltron minimum target.",
      ],
      "score": 27,
      "subMetrics": [
        {
          "contributingCards": [
            "Sol Ring",
          ],
          "key": "ramp.count",
          "label": "Ramp pieces",
          "raw": 1,
          "score": 8,
          "target": {
            "ideal": 10,
            "max": 12,
            "min": 8,
          },
          "weight": 0.2,
        },
        {
          "contributingCards": [],
          "key": "draw.density",
          "label": "Card-draw density",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 10,
            "max": 13,
            "min": 8,
          },
          "weight": 0.25,
        },
        {
          "contributingCards": [],
          "key": "tutor.count",
          "label": "Tutors",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 2,
            "max": 5,
            "min": 0,
          },
          "weight": 0.1,
        },
        {
          "contributingCards": [
            "Plains",
          ],
          "key": "manabase.size",
          "label": "Land count",
          "raw": 35,
          "score": 80,
          "target": {
            "ideal": 36,
            "max": 38,
            "min": 34,
          },
          "weight": 0.2,
        },
        {
          "contributingCards": [],
          "key": "curve.shape",
          "label": "Mana curve health",
          "raw": 1.33,
          "score": 56,
          "target": {
            "ideal": 2.6,
            "max": 3,
            "min": 2.2,
          },
          "weight": 0.1,
        },
      ],
    },
    "interaction": {
      "evidence": [
        {
          "axis": "I",
          "card": "Swords to Plowshares",
          "contribution": 1,
          "reason": "interaction: instant-speed interaction",
          "subMetric": "interaction.instantSpeed",
        },
        {
          "axis": "I",
          "card": "Swords to Plowshares",
          "contribution": 1,
          "reason": "interaction: spot removal",
          "subMetric": "removal.spot",
        },
        {
          "axis": "I",
          "card": "Swords to Plowshares",
          "contribution": 1,
          "reason": "interaction: coverage against creature",
          "subMetric": "interaction.coverage",
        },
      ],
      "grade": "F",
      "notes": [
        "Spot removal is below the aggro/voltron minimum target.",
        "Threat-type coverage is below the archetype minimum target.",
      ],
      "score": 13,
      "subMetrics": [
        {
          "contributingCards": [
            "Swords to Plowshares",
          ],
          "key": "removal.spot",
          "label": "Spot removal",
          "raw": 1,
          "score": 15,
          "target": {
            "ideal": 6,
            "max": 9,
            "min": 4,
          },
          "weight": 0.25,
        },
        {
          "contributingCards": [],
          "key": "removal.boardwipe",
          "label": "Board wipes",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 1,
            "max": 3,
            "min": 0,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [],
          "key": "counterspells.count",
          "label": "Counterspells",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 0,
            "max": 2,
            "min": 0,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [
            "Swords to Plowshares",
          ],
          "key": "interaction.instantSpeed",
          "label": "Instant-speed interaction",
          "raw": 100,
          "score": 60,
          "target": {
            "ideal": 35,
            "max": 50,
            "min": 20,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [],
          "key": "interaction.free",
          "label": "Free interaction",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 1,
            "max": 3,
            "min": 0,
          },
          "weight": 0.1,
        },
        {
          "contributingCards": [],
          "key": "interaction.stax",
          "label": "Stax / denial",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 0,
            "max": 2,
            "min": 0,
          },
          "weight": 0.05,
        },
        {
          "contributingCards": [
            "Swords to Plowshares",
          ],
          "key": "interaction.coverage",
          "label": "Threat-type coverage",
          "raw": 1,
          "score": 0,
          "target": {
            "ideal": 4,
            "max": 5,
            "min": 3,
          },
          "weight": 0.15,
        },
      ],
    },
    "resilience": {
      "evidence": [],
      "grade": "F",
      "notes": [
        "Recursion is below the aggro/voltron minimum target.",
        "Permanent-based protection is below the aggro/voltron minimum target.",
        "Protective spell density is below the aggro/voltron minimum target.",
        "Boardwipe survivability is below the aggro/voltron minimum target.",
      ],
      "score": 15,
      "subMetrics": [
        {
          "contributingCards": [],
          "key": "recursion.count",
          "label": "Recursion / rebuy",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 4,
            "max": 7,
            "min": 2,
          },
          "weight": 0.25,
        },
        {
          "contributingCards": [],
          "key": "protection.permanents",
          "label": "Permanent protection",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 6,
            "max": 9,
            "min": 4,
          },
          "weight": 0.2,
        },
        {
          "contributingCards": [],
          "key": "protection.spells",
          "label": "Protective spells",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 3,
            "max": 5,
            "min": 1,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [],
          "key": "boardwipe.survivability",
          "label": "Boardwipe survivability",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 15,
            "max": 25,
            "min": 8,
          },
          "weight": 0.25,
        },
        {
          "contributingCards": [],
          "key": "graveyard.exposure",
          "label": "Graveyard exposure",
          "raw": 0,
          "score": 100,
          "target": {
            "ideal": 0,
            "max": 4,
            "min": 0,
          },
          "weight": 0.15,
        },
      ],
    },
    "speed": {
      "evidence": [
        {
          "axis": "S",
          "card": "Sol Ring",
          "contribution": 40,
          "reason": "speed: fast mana",
          "subMetric": "mana.fast",
        },
        {
          "axis": "S",
          "card": "Sol Ring",
          "contribution": 1,
          "reason": "speed: early ramp",
          "subMetric": "mana.earlyRamp",
        },
        {
          "axis": "S",
          "card": "Blackblade Reforged",
          "contribution": 1,
          "reason": "speed: low drop",
          "subMetric": "curve.lowDrops",
        },
        {
          "axis": "S",
          "card": "Blackblade Reforged",
          "contribution": 1.25,
          "reason": "speed: threat density",
          "subMetric": "threat.density",
        },
        {
          "axis": "S",
          "card": "Swords to Plowshares",
          "contribution": 1,
          "reason": "speed: low drop",
          "subMetric": "curve.lowDrops",
        },
      ],
      "grade": "D",
      "notes": [
        "Early ramp density is below the aggro/voltron minimum target.",
        "Average mana value is outside the aggro/voltron target band.",
        "Low-drop density is below the aggro/voltron minimum target.",
        "Threat density is below the aggro/voltron minimum target.",
      ],
      "score": 41,
      "subMetrics": [
        {
          "contributingCards": [
            "Sol Ring",
          ],
          "key": "mana.fast",
          "label": "Fast mana",
          "raw": 40,
          "score": 80,
          "target": {
            "ideal": 50,
            "max": 75,
            "min": 30,
          },
          "weight": 0.2,
        },
        {
          "contributingCards": [
            "Sol Ring",
          ],
          "key": "mana.earlyRamp",
          "label": "Early ramp density",
          "raw": 1,
          "score": 10,
          "target": {
            "ideal": 9,
            "max": 12,
            "min": 6,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [],
          "key": "curve.avgCMC",
          "label": "Average mana value",
          "raw": 1.33,
          "score": 37,
          "target": {
            "ideal": 2.6,
            "max": 2.8,
            "min": 2.4,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [
            "Blackblade Reforged",
            "Swords to Plowshares",
          ],
          "key": "curve.lowDrops",
          "label": "Low-drop density",
          "raw": 2,
          "score": 7,
          "target": {
            "ideal": 24,
            "max": 30,
            "min": 18,
          },
          "weight": 0.1,
        },
        {
          "contributingCards": [
            "Blackblade Reforged",
          ],
          "key": "threat.density",
          "label": "Threat density",
          "raw": 1.25,
          "score": 9,
          "target": {
            "ideal": 12,
            "max": 16,
            "min": 8,
          },
          "weight": 0.2,
        },
        {
          "contributingCards": [],
          "key": "wincon.turnEstimate",
          "label": "Estimated goldfish turn",
          "raw": 4,
          "score": 100,
          "target": {
            "ideal": 5,
            "max": 4,
            "min": 6,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [],
          "key": "tutor.speed",
          "label": "Tutor speed contribution",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 1,
            "max": 3,
            "min": 0,
          },
          "weight": 0.05,
        },
      ],
    },
  },
  "deckMeta": {
    "archetype": "aggro/voltron",
    "cardCount": 39,
    "colorIdentity": [
      "W",
      "R",
    ],
    "commander": [
      "Commander",
    ],
    "unresolvedCount": 0,
  },
  "generatedAt": "<generated-at>",
  "overall": 24,
}
`;

exports[`CrispiReport snapshots > scores the combo fixture 1`] = `
{
  "axes": {
    "consistency": {
      "evidence": [
        {
          "axis": "C",
          "card": "Mana Vault",
          "contribution": 1,
          "reason": "ramp: mana production effect",
          "subMetric": "ramp.count",
        },
        {
          "axis": "C",
          "card": "Demonic Tutor",
          "contribution": 1.5,
          "reason": "tutor: broad tutor",
          "subMetric": "tutor.count",
        },
      ],
      "grade": "F",
      "notes": [
        "Card-draw density is below the combo minimum target.",
        "Ramp density is below the combo minimum target.",
      ],
      "score": 35,
      "subMetrics": [
        {
          "contributingCards": [
            "Mana Vault",
          ],
          "key": "ramp.count",
          "label": "Ramp pieces",
          "raw": 1,
          "score": 6,
          "target": {
            "ideal": 13,
            "max": 16,
            "min": 10,
          },
          "weight": 0.2,
        },
        {
          "contributingCards": [],
          "key": "draw.density",
          "label": "Card-draw density",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 15,
            "max": 18,
            "min": 12,
          },
          "weight": 0.25,
        },
        {
          "contributingCards": [
            "Demonic Tutor",
          ],
          "key": "tutor.count",
          "label": "Tutors",
          "raw": 1.5,
          "score": 15,
          "target": {
            "ideal": 9,
            "max": 12,
            "min": 6,
          },
          "weight": 0.1,
        },
        {
          "contributingCards": [
            "Swamp",
          ],
          "key": "manabase.size",
          "label": "Land count",
          "raw": 35,
          "score": 100,
          "target": {
            "ideal": 34,
            "max": 37,
            "min": 32,
          },
          "weight": 0.2,
        },
        {
          "contributingCards": [],
          "key": "curve.shape",
          "label": "Mana curve health",
          "raw": 3.67,
          "score": 70,
          "target": {
            "ideal": 2.8,
            "max": 3.1999999999999997,
            "min": 2.4,
          },
          "weight": 0.1,
        },
      ],
    },
    "interaction": {
      "evidence": [],
      "grade": "F",
      "notes": [
        "Spot removal is below the combo minimum target.",
        "Board wipe density is below the combo minimum target.",
        "Counterspell density is below the combo minimum target.",
        "Instant-speed interaction is below the combo minimum target.",
        "Free interaction density is below the combo minimum target.",
        "Threat-type coverage is below the archetype minimum target.",
      ],
      "score": 0,
      "subMetrics": [
        {
          "contributingCards": [],
          "key": "removal.spot",
          "label": "Spot removal",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 5,
            "max": 8,
            "min": 3,
          },
          "weight": 0.25,
        },
        {
          "contributingCards": [],
          "key": "removal.boardwipe",
          "label": "Board wipes",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 2,
            "max": 4,
            "min": 1,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [],
          "key": "counterspells.count",
          "label": "Counterspells",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 8,
            "max": 13,
            "min": 4,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [],
          "key": "interaction.instantSpeed",
          "label": "Instant-speed interaction",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 65,
            "max": 80,
            "min": 50,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [],
          "key": "interaction.free",
          "label": "Free interaction",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 4,
            "max": 7,
            "min": 2,
          },
          "weight": 0.1,
        },
        {
          "contributingCards": [],
          "key": "interaction.stax",
          "label": "Stax / denial",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 1,
            "max": 3,
            "min": 0,
          },
          "weight": 0.05,
        },
        {
          "contributingCards": [],
          "key": "interaction.coverage",
          "label": "Threat-type coverage",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 4,
            "max": 5,
            "min": 3,
          },
          "weight": 0.15,
        },
      ],
    },
    "resilience": {
      "evidence": [],
      "grade": "F",
      "notes": [
        "Recursion is below the combo minimum target.",
        "Permanent-based protection is below the combo minimum target.",
        "Protective spell density is below the combo minimum target.",
        "Boardwipe survivability is below the combo minimum target.",
      ],
      "score": 15,
      "subMetrics": [
        {
          "contributingCards": [],
          "key": "recursion.count",
          "label": "Recursion / rebuy",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 4,
            "max": 6,
            "min": 2,
          },
          "weight": 0.25,
        },
        {
          "contributingCards": [],
          "key": "protection.permanents",
          "label": "Permanent protection",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 4,
            "max": 6,
            "min": 2,
          },
          "weight": 0.2,
        },
        {
          "contributingCards": [],
          "key": "protection.spells",
          "label": "Protective spells",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 8,
            "max": 14,
            "min": 4,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [],
          "key": "boardwipe.survivability",
          "label": "Boardwipe survivability",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 12,
            "max": 22,
            "min": 5,
          },
          "weight": 0.25,
        },
        {
          "contributingCards": [],
          "key": "graveyard.exposure",
          "label": "Graveyard exposure",
          "raw": 0,
          "score": 100,
          "target": {
            "ideal": 0,
            "max": 4,
            "min": 0,
          },
          "weight": 0.15,
        },
      ],
    },
    "speed": {
      "evidence": [
        {
          "axis": "S",
          "card": "Mana Vault",
          "contribution": 40,
          "reason": "speed: fast mana",
          "subMetric": "mana.fast",
        },
        {
          "axis": "S",
          "card": "Mana Vault",
          "contribution": 1,
          "reason": "speed: early ramp",
          "subMetric": "mana.earlyRamp",
        },
        {
          "axis": "S",
          "card": "Demonic Tutor",
          "contribution": 1,
          "reason": "speed: low drop",
          "subMetric": "curve.lowDrops",
        },
        {
          "axis": "S",
          "card": "Demonic Tutor",
          "contribution": 1,
          "reason": "speed: tutor-speed contribution",
          "subMetric": "tutor.speed",
        },
        {
          "axis": "S",
          "card": "Craterhoof Behemoth",
          "contribution": 1.5,
          "reason": "speed: threat density",
          "subMetric": "threat.density",
        },
      ],
      "grade": "D",
      "notes": [
        "Fast mana is below the combo minimum target.",
        "Early ramp density is below the combo minimum target.",
        "Average mana value is outside the combo target band.",
        "Low-drop density is below the combo minimum target.",
        "Threat density is below the combo minimum target.",
      ],
      "score": 46,
      "subMetrics": [
        {
          "contributingCards": [
            "Mana Vault",
          ],
          "key": "mana.fast",
          "label": "Fast mana",
          "raw": 40,
          "score": 48,
          "target": {
            "ideal": 70,
            "max": 90,
            "min": 50,
          },
          "weight": 0.2,
        },
        {
          "contributingCards": [
            "Mana Vault",
          ],
          "key": "mana.earlyRamp",
          "label": "Early ramp density",
          "raw": 1,
          "score": 9,
          "target": {
            "ideal": 10,
            "max": 14,
            "min": 7,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [],
          "key": "curve.avgCMC",
          "label": "Average mana value",
          "raw": 3.67,
          "score": 49,
          "target": {
            "ideal": 2.65,
            "max": 2.9,
            "min": 2.4,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [
            "Demonic Tutor",
          ],
          "key": "curve.lowDrops",
          "label": "Low-drop density",
          "raw": 1,
          "score": 4,
          "target": {
            "ideal": 18,
            "max": 24,
            "min": 14,
          },
          "weight": 0.1,
        },
        {
          "contributingCards": [
            "Craterhoof Behemoth",
          ],
          "key": "threat.density",
          "label": "Threat density",
          "raw": 1.5,
          "score": 45,
          "target": {
            "ideal": 4,
            "max": 7,
            "min": 2,
          },
          "weight": 0.2,
        },
        {
          "contributingCards": [],
          "key": "wincon.turnEstimate",
          "label": "Estimated goldfish turn",
          "raw": 3,
          "score": 100,
          "target": {
            "ideal": 5,
            "max": 3,
            "min": 6,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [
            "Demonic Tutor",
          ],
          "key": "tutor.speed",
          "label": "Tutor speed contribution",
          "raw": 1,
          "score": 60,
          "target": {
            "ideal": 2,
            "max": 4,
            "min": 1,
          },
          "weight": 0.05,
        },
      ],
    },
  },
  "deckMeta": {
    "archetype": "combo",
    "cardCount": 39,
    "colorIdentity": [
      "U",
      "B",
    ],
    "commander": [
      "Commander",
    ],
    "unresolvedCount": 0,
  },
  "generatedAt": "<generated-at>",
  "overall": 24,
}
`;

exports[`CrispiReport snapshots > scores the control fixture 1`] = `
{
  "axes": {
    "consistency": {
      "evidence": [],
      "grade": "F",
      "notes": [
        "Land count is below the control minimum target.",
        "Card-draw density is below the control minimum target.",
        "Ramp density is below the control minimum target.",
      ],
      "score": 23,
      "subMetrics": [
        {
          "contributingCards": [],
          "key": "ramp.count",
          "label": "Ramp pieces",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 10,
            "max": 12,
            "min": 8,
          },
          "weight": 0.2,
        },
        {
          "contributingCards": [],
          "key": "draw.density",
          "label": "Card-draw density",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 15,
            "max": 18,
            "min": 12,
          },
          "weight": 0.25,
        },
        {
          "contributingCards": [],
          "key": "tutor.count",
          "label": "Tutors",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 5,
            "max": 8,
            "min": 3,
          },
          "weight": 0.1,
        },
        {
          "contributingCards": [
            "Island",
          ],
          "key": "manabase.size",
          "label": "Land count",
          "raw": 35,
          "score": 58,
          "target": {
            "ideal": 38,
            "max": 41,
            "min": 36,
          },
          "weight": 0.2,
        },
        {
          "contributingCards": [],
          "key": "curve.shape",
          "label": "Mana curve health",
          "raw": 3.5,
          "score": 83,
          "target": {
            "ideal": 3,
            "max": 3.4,
            "min": 2.6,
          },
          "weight": 0.1,
        },
      ],
    },
    "interaction": {
      "evidence": [
        {
          "axis": "I",
          "card": "Counterspell",
          "contribution": 1,
          "reason": "interaction: instant-speed interaction",
          "subMetric": "interaction.instantSpeed",
        },
        {
          "axis": "I",
          "card": "Counterspell",
          "contribution": 1,
          "reason": "interaction: counterspell",
          "subMetric": "counterspells.count",
        },
        {
          "axis": "I",
          "card": "Force of Will",
          "contribution": 1,
          "reason": "interaction: instant-speed interaction",
          "subMetric": "interaction.instantSpeed",
        },
        {
          "axis": "I",
          "card": "Force of Will",
          "contribution": 1,
          "reason": "interaction: counterspell",
          "subMetric": "counterspells.count",
        },
        {
          "axis": "I",
          "card": "Force of Will",
          "contribution": 1,
          "reason": "interaction: free interaction",
          "subMetric": "interaction.free",
        },
        {
          "axis": "I",
          "card": "Wrath of God",
          "contribution": 1,
          "reason": "interaction: board wipe",
          "subMetric": "removal.boardwipe",
        },
        {
          "axis": "I",
          "card": "Wrath of God",
          "contribution": 1,
          "reason": "interaction: coverage against creature",
          "subMetric": "interaction.coverage",
        },
        {
          "axis": "I",
          "card": "Rule of Law",
          "contribution": 1,
          "reason": "interaction: stax piece",
          "subMetric": "interaction.stax",
        },
      ],
      "grade": "F",
      "notes": [
        "Spot removal is below the control minimum target.",
        "Board wipe density is below the control minimum target.",
        "Counterspell density is below the control minimum target.",
        "Instant-speed interaction is below the control minimum target.",
        "Free interaction density is below the control minimum target.",
        "Threat-type coverage is below the archetype minimum target.",
      ],
      "score": 22,
      "subMetrics": [
        {
          "contributingCards": [],
          "key": "removal.spot",
          "label": "Spot removal",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 7,
            "max": 10,
            "min": 4,
          },
          "weight": 0.25,
        },
        {
          "contributingCards": [
            "Wrath of God",
          ],
          "key": "removal.boardwipe",
          "label": "Board wipes",
          "raw": 1,
          "score": 30,
          "target": {
            "ideal": 4,
            "max": 6,
            "min": 2,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [
            "Counterspell",
            "Force of Will",
          ],
          "key": "counterspells.count",
          "label": "Counterspells",
          "raw": 2,
          "score": 20,
          "target": {
            "ideal": 10,
            "max": 15,
            "min": 6,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [
            "Counterspell",
            "Force of Will",
          ],
          "key": "interaction.instantSpeed",
          "label": "Instant-speed interaction",
          "raw": 50,
          "score": 55,
          "target": {
            "ideal": 70,
            "max": 85,
            "min": 55,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [
            "Force of Will",
          ],
          "key": "interaction.free",
          "label": "Free interaction",
          "raw": 1,
          "score": 30,
          "target": {
            "ideal": 4,
            "max": 7,
            "min": 2,
          },
          "weight": 0.1,
        },
        {
          "contributingCards": [
            "Rule of Law",
          ],
          "key": "interaction.stax",
          "label": "Stax / denial",
          "raw": 1,
          "score": 60,
          "target": {
            "ideal": 2,
            "max": 4,
            "min": 1,
          },
          "weight": 0.05,
        },
        {
          "contributingCards": [
            "Wrath of God",
          ],
          "key": "interaction.coverage",
          "label": "Threat-type coverage",
          "raw": 1,
          "score": 0,
          "target": {
            "ideal": 5,
            "max": 5,
            "min": 4,
          },
          "weight": 0.15,
        },
      ],
    },
    "resilience": {
      "evidence": [],
      "grade": "F",
      "notes": [
        "Recursion is below the control minimum target.",
        "Permanent-based protection is below the control minimum target.",
        "Protective spell density is below the control minimum target.",
        "Boardwipe survivability is below the control minimum target.",
      ],
      "score": 15,
      "subMetrics": [
        {
          "contributingCards": [],
          "key": "recursion.count",
          "label": "Recursion / rebuy",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 4,
            "max": 6,
            "min": 2,
          },
          "weight": 0.25,
        },
        {
          "contributingCards": [],
          "key": "protection.permanents",
          "label": "Permanent protection",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 4,
            "max": 6,
            "min": 2,
          },
          "weight": 0.2,
        },
        {
          "contributingCards": [],
          "key": "protection.spells",
          "label": "Protective spells",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 7,
            "max": 12,
            "min": 4,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [],
          "key": "boardwipe.survivability",
          "label": "Boardwipe survivability",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 20,
            "max": 30,
            "min": 12,
          },
          "weight": 0.25,
        },
        {
          "contributingCards": [],
          "key": "graveyard.exposure",
          "label": "Graveyard exposure",
          "raw": 0,
          "score": 100,
          "target": {
            "ideal": 0,
            "max": 4,
            "min": 0,
          },
          "weight": 0.15,
        },
      ],
    },
    "speed": {
      "evidence": [
        {
          "axis": "S",
          "card": "Counterspell",
          "contribution": 1,
          "reason": "speed: low drop",
          "subMetric": "curve.lowDrops",
        },
      ],
      "grade": "F",
      "notes": [
        "Fast mana is below the control minimum target.",
        "Early ramp density is below the control minimum target.",
        "Average mana value is outside the control target band.",
        "Low-drop density is below the control minimum target.",
        "Threat density is below the control minimum target.",
      ],
      "score": 27,
      "subMetrics": [
        {
          "contributingCards": [],
          "key": "mana.fast",
          "label": "Fast mana",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 35,
            "max": 55,
            "min": 20,
          },
          "weight": 0.2,
        },
        {
          "contributingCards": [],
          "key": "mana.earlyRamp",
          "label": "Early ramp density",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 7,
            "max": 10,
            "min": 4,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [],
          "key": "curve.avgCMC",
          "label": "Average mana value",
          "raw": 3.5,
          "score": 75,
          "target": {
            "ideal": 3,
            "max": 3.2,
            "min": 2.8,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [
            "Counterspell",
          ],
          "key": "curve.lowDrops",
          "label": "Low-drop density",
          "raw": 1,
          "score": 4,
          "target": {
            "ideal": 18,
            "max": 24,
            "min": 14,
          },
          "weight": 0.1,
        },
        {
          "contributingCards": [],
          "key": "threat.density",
          "label": "Threat density",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 5,
            "max": 8,
            "min": 3,
          },
          "weight": 0.2,
        },
        {
          "contributingCards": [],
          "key": "wincon.turnEstimate",
          "label": "Estimated goldfish turn",
          "raw": 7,
          "score": 100,
          "target": {
            "ideal": 9,
            "max": 7,
            "min": 10,
          },
          "weight": 0.15,
        },
        {
          "contributingCards": [],
          "key": "tutor.speed",
          "label": "Tutor speed contribution",
          "raw": 0,
          "score": 0,
          "target": {
            "ideal": 1,
            "max": 3,
            "min": 0,
          },
          "weight": 0.05,
        },
      ],
    },
  },
  "deckMeta": {
    "archetype": "control",
    "cardCount": 40,
    "colorIdentity": [
      "U",
      "W",
    ],
    "commander": [
      "Commander",
    ],
    "unresolvedCount": 0,
  },
  "generatedAt": "<generated-at>",
  "overall": 22,
}
`;
